[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rapids_singlecell"
description = "running single cell analysis on Nvidia GPUs"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Severin Dicks"}]
readme = {file = "README.md", content-type="text/markdown"}
dynamic = ["version"]

dependencies = [
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
    "numpy>=1.17.0",
    "decoupler>=1.3.2",
    "scipy>=1.4",
    "pandas",
    "natsort",
    "scikit-misc>=0.1.3",
    "matplotlib>=3.4",
    "tqdm",
    "statsmodels>=0.12.0",
    "scikit-image",
]

[project.optional-dependencies]
rapids11 = ["cudf-cu11==24.6.*", "cuml-cu11==24.6.*", "cugraph-cu11==24.6.*"]
rapids12 = ["cudf-cu12==24.6.*", "cuml-cu12==24.6.*", "cugraph-cu12==24.6.*"]
doc = [
    "sphinx>=4.5.0",
    "sphinx-copybutton",
    "nbsphinx>=0.8.12",
    "myst-nb",
    "scanpydoc[typehints,theme]>=0.9.4",
    "readthedocs-sphinx-ext",
    "sphinx_copybutton",
]
test = [
    "pytest",
    "omnipath",
    "profimp",
    "scanpy[test]>=1.10.0"
]

[project.urls]
Documentation = "https://rapids-singlecell.readthedocs.io"
Source = "https://github.com/scverse/rapids_singlecell"

[tool.ruff]
src = ["src"]
exclude = ["tests/"]
line-length = 88
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "TID251",  # Banned imports
    "RUF100",  # Report unused noqa directives
    "ICN",     # Follow import conventions
    "PTH",     # Pathlib instead of os.path
    "TCH",     # manage type checking blocks
    "PLR0917", # Ban APIs with too many positional parameters
]

ignore = [
    # line too long -> we accept long comment lines; formatting gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "F403",
]

[tool.ruff.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]
"src/rapids_singlecell/preprocessing/_harmonypy_gpu.py" = ["PLR0917"]
"src/rapids_singlecell/decoupler_gpu/_method_mlm.py" = ["PLR0917"]
"src/rapids_singlecell/decoupler_gpu/_method_wsum.py" = ["PLR0917"]


[tool.ruff.lint.isort]
known-first-party = ["rapids_singlecell"]
required-imports = ["from __future__ import annotations"]

[tool.hatch.build]
# exclude big files that don’t need to be installed
exclude = [
    "tests",
    "docs",
    "notebooks"
]
[tool.hatch.build.hooks.vcs]
version-file = "src/rapids_singlecell/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ['src/rapids_singlecell']

[tool.codespell]
skip = '*.ipynb,*.csv'
ignore-words-list = "nd"
