[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "rapids_singlecell"
description = "running single cell analysis on Nvidia GPUs"
requires-python = ">=3.11, <3.14"
license = { file = "LICENSE" }
authors = [ { name = "Severin Dicks" } ]
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = [ "version" ]

dependencies = [
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
    "numpy>=1.17.0",
    "scipy>=1.4",
    "pandas",
    "natsort",
    "scikit-misc>=0.1.3",
    "matplotlib>=3.4",
    "tqdm",
    "statsmodels>=0.12.0",
    "scikit-image",
    "docrep",
]

[project.optional-dependencies]
rapids11 = [ "cupy-cuda11x", "cudf-cu11==25.04.*", "cuml-cu11==25.04.*", "cugraph-cu11==25.04.*" ]
rapids12 = [ "cupy-cuda12x", "cudf-cu12==25.04.*", "cuml-cu12==25.04.*", "cugraph-cu12==25.04.*" ]
doc = [
    "sphinx>=4.5.0",
    "sphinx-copybutton",
    "nbsphinx>=0.8.12",
    "myst-nb",
    "sphinx-design",
    "scanpydoc[typehints,theme]>=0.9.4",
    "readthedocs-sphinx-ext",
    "sphinx_copybutton",
    "dask",
    "pytest",
]
test-minimal = [
    "pytest",
    "profimp",
    "scanpy>=1.10.0",
    "bbknn",
    "decoupler",
    "fast-array-utils",
]
test = [
    "rapids_singlecell[test-minimal]",
    "igraph",
]

[project.urls]
Documentation = "https://rapids-singlecell.readthedocs.io"
Source = "https://github.com/scverse/rapids_singlecell"

[tool.ruff]
src = [ "src" ]
line-length = 88
lint.select = [
    "F",       # Errors detected by Pyflakes
    "E",       # Error detected by Pycodestyle
    "W",       # Warning detected by Pycodestyle
    "I",       # isort
    "TID",     # flake8-tidy-imports
    "C4",      # flake8-comprehensions
    "BLE",     # flake8-blind-except
    "FBT",     # No boolean positional parameters
    "UP",      # pyupgrade
    "TID251",  # Banned imports
    "RUF100",  # Report unused noqa directives
    "ICN",     # Follow import conventions
    "PTH",     # Pathlib instead of os.path
    "TC",      # manage type checking blocks
    "PLR0917", # Ban APIs with too many positional parameters
]

lint.ignore = [
    # line too long -> we accept long comment lines; formatting gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "F403",
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = [ "I" ]
"tests/*" = [ "D", "FBT" ]
"*/__init__.py" = [ "F401" ]
[tool.ruff.lint.isort]
known-first-party = [ "rapids_singlecell" ]
required-imports = [ "from __future__ import annotations" ]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
markers = [
    "gpu: tests that use a GPU (currently unused, but needs to be specified here as we import anndata.tests.helpers, which uses it)",
]

[tool.hatch.build]
# exclude big files that don’t need to be installed
exclude = [
    "tests",
    "docs",
    "notebooks",
]
[tool.hatch.build.hooks.vcs]
version-file = "src/rapids_singlecell/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [ 'src/rapids_singlecell', 'src/testing' ]

[tool.codespell]
skip = '*.ipynb,*.csv'
ignore-words-list = "nd"
